versioned_docs/version-2.1.0/CHANGELOG.md
# 更新日志

## [2.1.0] - 2024-01-15

### 🚀 新增功能

#### 规则引擎增强
- **新增数据源支持**
  - 支持 ClickHouse 数据存储
  - 支持 Pulsar 消息发送
  - 支持 RocketMQ 消息发送
  - 支持 TDengine 时序数据存储
- **性能监控**
  - 新增规则执行性能监控
  - 支持规则执行时间统计
  - 支持规则错误率监控
- **错误处理**
  - 增强错误重试机制
  - 支持死信队列配置
  - 改进错误日志记录

#### 配置管理
- **配置验证**
  - 增强配置文件验证
  - 提供详细的错误提示
  - 支持配置语法检查
- **热重载**
  - 支持配置热重载
  - 无需重启服务即可应用新配置
- **配置模板**
  - 提供常用配置模板
  - 简化配置过程

#### 可观测性
- **指标收集**
  - 新增系统性能指标
  - 支持自定义指标收集
  - 提供 Prometheus 格式指标
- **日志优化**
  - 结构化日志输出
  - 支持日志级别配置
  - 改进日志格式
- **告警机制**
  - 内置告警规则
  - 支持多种通知方式
  - 可配置告警阈值

### 🔧 功能改进

#### 性能优化
- **规则引擎性能**
  - 批量处理性能提升 30%
  - 内存使用优化 25%
  - SQL 解析性能提升 40%
- **消息处理**
  - 消息路由优化
  - 连接处理改进
  - 集群通信优化
- **存储优化**
  - 数据持久化性能提升
  - 索引查询优化
  - 缓存机制改进

#### 稳定性改进
- **错误恢复**
  - 增强错误恢复机制
  - 改进故障检测
  - 支持自动故障转移
- **数据一致性**
  - 改进事务处理
  - 增强数据一致性保证
  - 支持分布式事务

#### 开发体验
- **API 改进**
  - 简化 API 接口
  - 改进错误响应
  - 增强 API 文档
- **文档完善**
  - 更新所有文档
  - 添加使用示例
  - 提供最佳实践

### 🐛 问题修复

#### 规则引擎
- 修复 SQL 解析器内存泄漏问题
- 修复批量处理时的并发问题
- 修复函数执行时的空指针异常
- 修复规则执行顺序问题

#### 数据源
- 修复 MySQL 连接池泄漏问题
- 修复 Redis 连接超时问题
- 修复 Kafka 消息发送失败问题
- 修复 PostgreSQL 事务回滚问题

#### 系统稳定性
- 修复高并发下的内存溢出问题
- 修复集群节点通信异常
- 修复配置热重载时的竞态条件
- 修复日志文件轮转问题

### 🔄 兼容性变更

#### 配置变更
- 新增 `offlineMessage` 配置项
- 新增 `ruleEngineMetrics` 配置项
- 修改 `pool` 配置结构
- 废弃部分旧配置项

#### API 变更
- 新增规则引擎监控 API
- 修改部分 API 响应格式
- 废弃部分旧 API 接口

#### 数据库变更
- 新增离线消息表
- 新增规则引擎监控表
- 修改部分表结构

### 📚 文档更新

- 更新安装部署文档
- 新增规则引擎使用指南
- 新增数据源配置文档
- 更新 API 文档
- 新增性能调优指南
- 新增故障排查指南

### 🔧 依赖更新

- 升级 Spring Boot 到 3.2.0
- 升级 Netty 到 4.1.100
- 升级 MySQL 驱动到 8.0.33
- 升级 Redis 客户端到 4.3.1
- 升级 Kafka 客户端到 3.5.1

### 🚨 重要说明

#### 升级注意事项
1. **数据库升级**：需要执行数据库升级脚本
2. **配置更新**：部分配置项需要更新
3. **API 兼容**：部分 API 接口有变更
4. **性能测试**：建议升级后进行性能测试

#### 废弃功能
- 废弃旧版本的部分配置项
- 废弃旧版本的 API 接口
- 废弃旧版本的数据表结构

#### 已知问题
- 在特定场景下可能存在内存使用过高的问题
- 集群模式下可能存在节点同步延迟
- 高并发场景下可能存在连接池耗尽问题

### 📊 性能数据

#### 基准测试结果
- **消息吞吐量**：100万消息/秒
- **连接数**：支持10万并发连接
- **规则执行**：单规则执行时间 < 1ms
- **内存使用**：相比2.0.x版本减少25%

#### 压力测试结果
- **稳定性**：7x24小时稳定运行
- **错误率**：< 0.01%
- **延迟**：P99延迟 < 10ms
- **CPU使用**：平均CPU使用率 < 30%

---

## [2.0.19] - 2023-12-20

### 🐛 问题修复
- 修复规则引擎内存泄漏问题
- 修复集群节点通信异常
- 修复配置热重载问题

### 🔧 功能改进
- 优化消息处理性能
- 改进错误处理机制
- 增强日志记录

---

## [2.0.18] - 2023-12-10

### 🚀 新增功能
- 新增 Redis 数据源支持
- 新增规则引擎基础功能
- 新增集群管理功能

### 🔧 功能改进
- 优化连接处理性能
- 改进配置管理
- 增强监控功能

---

## [2.0.17] - 2023-11-30

### 🐛 问题修复
- 修复高并发连接问题
- 修复消息丢失问题
- 修复内存使用问题

### 🔧 功能改进
- 优化系统性能
- 改进错误处理
- 增强稳定性

---

## 版本历史

### 2.1.x 系列
- **2.1.0** - 重大功能增强版本
  - 新增多种数据源支持
  - 规则引擎性能大幅提升
  - 增强可观测性功能

### 2.0.x 系列
- **2.0.19** - 稳定性修复版本
- **2.0.18** - 功能增强版本
- **2.0.17** - 问题修复版本

### 1.x 系列
- **1.9.x** - 早期版本，已停止维护
- **1.8.x** - 早期版本，已停止维护

---

## 贡献者

感谢所有为 FluxMQ 2.1.0 做出贡献的开发者！

### 核心贡献者
- 开发团队
- 测试团队
- 文档团队
- 社区贡献者

### 特别感谢
- 所有用户反馈和建议
- 开源社区的支持
- 合作伙伴的协助

---

## 许可证

FluxMQ 采用 Apache License 2.0 开源许可证。 